Added reviews and bookmarning APIs
